[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/fairy1.png" type="Texture" id=1]
[ext_resource path="res://Fairy.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 20, 26 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 20, 0, 20, 26 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 6, 10.5 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 125, 119 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 61, 62 )

[node name="Fairy1" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 3, -0.5 )
shape = SubResource( 4 )

[node name="PlayerIndicator" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerIndicator"]
shape = SubResource( 5 )

[node name="DangerIndicator" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DangerIndicator"]
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]

[connection signal="tree_exiting" from="." to="." method="_on_Fairy1_tree_exiting"]
[connection signal="body_entered" from="PlayerIndicator" to="." method="_on_PlayerIndicator_body_entered"]
[connection signal="body_exited" from="PlayerIndicator" to="." method="_on_PlayerIndicator_body_exited"]
[connection signal="body_entered" from="DangerIndicator" to="." method="_on_DangerIndicator_body_entered"]
[connection signal="body_exited" from="DangerIndicator" to="." method="_on_DangerIndicator_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
